--- a/Split_It/Split_It/AddExpensePage.xaml
+++ b/Split_It/Split_It/AddExpensePage.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:Split_It"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:con_exp="using:Split_It.Converter.AddExpense"
     mc:Ignorable="d">
 
     <Page.DataContext>
@@ -16,6 +17,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Skins/AddExpenseSkin.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <con_exp:AvailableDetailsToBackgroudColorConverter x:Key="AvailableDetailsToBackgroudColorConverter"/>
         </ResourceDictionary>
     </Page.Resources>
 
@@ -41,8 +43,8 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
 
                 <Grid>
@@ -58,30 +60,27 @@
                     <AutoSuggestBox Grid.Column="1"/>
                 </Grid>
 
-                <Grid Grid.Row="3">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="60"/>
-                        <RowDefinition Height="60"/>
-                    </Grid.RowDefinitions>
+                <Grid Grid.Row="4">
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    
-                    <TextBlock Text="Date:" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                    <DatePicker Grid.Column="1" MonthFormat="{}{month.abbreviated}" 
-                                Date="{Binding ExpenseToAdd.CreatedAt, Mode=TwoWay}" />
-                    <TextBlock Text="Part of Group:" VerticalAlignment="Center" Margin="0,0,5,0" Grid.Row="1"/>
-                    <ComboBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"/>
-                    
-                </Grid>
 
-                <StackPanel Orientation="Vertical" Grid.Row="4" Margin="0,15">
-                    <TextBlock Text="Additional Notes:" Margin="0,0,0,5"/>
-                    <TextBox Text="{Binding ExpenseToAdd.Details}" AcceptsReturn="True" 
-                                 Padding="0"
-                                 TextWrapping="Wrap" InputScope="Text"/>
-                </StackPanel>
+                    <DatePicker MonthFormat="{}{month.abbreviated}" 
+                                Date="{Binding ExpenseToAdd.CreatedAt, Mode=TwoWay}" />
+                    <ComboBox Grid.Column="1" VerticalAlignment="Center" Margin="15,0"/>
+                    <Button Grid.Column="2" Content="&#xE8BD;" FontFamily="Segoe MDL2 Assets" FontSize="22"
+                            Background="Transparent" Style="{StaticResource NoBorderSelectButton}"
+                            Foreground="{Binding ExpenseToAdd.Details, Converter={StaticResource AvailableDetailsToBackgroudColorConverter}}">
+                        <Button.Flyout>
+                            <Flyout>
+                                <TextBox Text="{Binding ExpenseToAdd.Details, Mode=TwoWay}" AcceptsReturn="True"
+                                         TextWrapping="Wrap" InputScope="Text" MinWidth="200"/>
+                            </Flyout>
+                        </Button.Flyout>
+                    </Button>
+                </Grid>
             </Grid>
         </ScrollViewer>
     </Grid>
