Show expense date

--- a/Split_It/Split_It/AddExpensePage.xaml
+++ b/Split_It/Split_It/AddExpensePage.xaml
@@ -68,7 +68,7 @@
                     </Grid.ColumnDefinitions>
 
                     <DatePicker MonthFormat="{}{month.abbreviated}" 
-                                Date="{Binding ExpenseToAdd.CreatedAt, Mode=TwoWay}" />
+                                Date="{Binding ExpenseToAdd.Date, Mode=TwoWay}" />
                     <ComboBox Grid.Column="1" VerticalAlignment="Center" Margin="15,0"/>
                     <Button Grid.Column="2" Content="&#xE8BD;" FontFamily="Segoe MDL2 Assets" FontSize="22"
                             Background="Transparent" Style="{StaticResource NoBorderSelectButton}"
