--- a/Split_It/Split_It/AddExpensePage.xaml
+++ b/Split_It/Split_It/AddExpensePage.xaml
@@ -62,6 +62,36 @@
                     <AutoSuggestBox Grid.Column="1"/>
                 </Grid>
 
+                <Grid Grid.Row="1" Margin="0,20">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Image Stretch="Uniform" Width="35" Source="Assets/Images/expense_general.png" VerticalAlignment="Center"/>
+                    <Grid Grid.Column="1" BorderThickness="15,0,0,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <TextBox Text="{Binding ExpenseToAdd.Description, Mode=TwoWay}" PlaceholderText="Enter a description" 
+                                 InputScope="Text" TextWrapping="NoWrap" BorderThickness="0,0,0,1"/>
+
+                        <Grid Grid.Row="1" Margin="0,10,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <ComboBox BorderThickness="1" VerticalAlignment="Bottom"
+                                      ItemsSource="{Binding SupportedCurrencyList}" DisplayMemberPath="CurrencyCode"
+                                      SelectedValue="{Binding ExpenseToAdd.CurrencyCode, Mode=TwoWay}" SelectedValuePath="CurrencyCode"/>
+                            <TextBox Text="{Binding ExpenseToAdd.Cost, Mode=TwoWay}" PlaceholderText="0.00"
+                                 InputScope="CurrencyAmount" BorderThickness="0,0,0,1" TextWrapping="NoWrap"                             
+                                 FontSize="22" FontWeight="SemiBold" Grid.Column="1" Margin="5,0,0,0"/>
+                        </Grid>
+                    </Grid>
+                </Grid>
+
                 <Grid Grid.Row="4">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*"/>
