--- a/Split_It/Split_It/AddExpensePage.xaml
+++ b/Split_It/Split_It/AddExpensePage.xaml
@@ -1,27 +1,36 @@
 ﻿<Page
-    x:Class="Split_It.AddExpensePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Split_It"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:con_exp="using:Split_It.Converter.AddExpense"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+    x:Class="Split_It.AddExpensePage"
     mc:Ignorable="d">
-
-    <Page.DataContext>
-        <Binding Path="AddExpenseVM" Source="{StaticResource Locator}"/>
-    </Page.DataContext>
 
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Skins/AddExpenseSkin.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            
+
             <con_exp:AvailableDetailsToBackgroudColorConverter x:Key="AvailableDetailsToBackgroudColorConverter"/>
             <con_exp:DateTimeToStringConverter x:Key="DateTimeToStringConverter"/>
+            <con_exp:GroupSelectedToMembersConverter x:Key="GroupSelectedToMembersConverter"/>
+            <con_exp:ListSelectionToMemberConverter x:Key="ListSelectionToMemberConverter"/>
         </ResourceDictionary>
     </Page.Resources>
+
+    <Page.DataContext>
+        <Binding Path="AddExpenseVM" Source="{StaticResource Locator}"/>
+    </Page.DataContext>
+
+    <Page.BottomAppBar>
+        <CommandBar ClosedDisplayMode="Minimal">
+            <AppBarButton Command="{Binding RecordExpenseCommand}" Icon="Save" Label="save"/>
+        </CommandBar>
+    </Page.BottomAppBar>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
@@ -30,98 +39,136 @@
         </Grid.RowDefinitions>
         <StackPanel Background="{StaticResource splitwiseGreen}" Orientation="Horizontal">
             <Button FontFamily="Segoe MDL2 Assets"
-					Foreground="White"
-					Content="&#xE72B;"
-					Width="50" Height="50" 
-                    Command="{Binding GoBackCommand}"
-					Background="Transparent" Style="{StaticResource NoBorderSelectButton}"/>
+				Foreground="White"
+				Content="&#xE72B;"
+				Width="50" Height="50" 
+				Command="{Binding GoBackCommand}"
+				Background="Transparent" Style="{StaticResource NoBorderSelectButton}"/>
 
             <TextBlock Text="Add Expense" Foreground="White" VerticalAlignment="Center" Margin="10,0,0,0"/>
         </StackPanel>
 
-        <ScrollViewer Grid.Row="1" Padding='20,15'>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="50"/>
-                </Grid.RowDefinitions>
+        <Grid Grid.Row="1" Padding='20,15'>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
 
+            <StackPanel Grid.Row="0" Orientation="Vertical">
+                <TextBlock VerticalAlignment="Center">
+					<Run Text="With"/>
+					<Run Text="you" FontWeight="Bold"/>
+					<Run Text="and:"/>
+                </TextBlock>
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="70"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock VerticalAlignment="Center">
-                        <Run Text="With"/>
-                        <Run Text="you" FontWeight="Bold"/>
-                        <Run Text="and:"/>
-                    </TextBlock>
-                    <AutoSuggestBox Grid.Column="1"/>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Text="Friends:" VerticalAlignment="Center"/>
+                    <AutoSuggestBox Grid.Column="1" VerticalAlignment="Center" PlaceholderText="Select friends"
+						DisplayMemberPath="Name" TextMemberPath="Name"
+						x:Name="friendsBox"
+						ItemsSource="{Binding MainVM.AllFriendsList, Source={StaticResource Locator}}"/>
+
+                    <TextBlock Text="Group" VerticalAlignment="Center" Grid.Row="1"/>
+                    <ComboBox Grid.Column="1" VerticalAlignment="Center" Grid.Row="1" Width="{Binding ActualWidth, ElementName=friendsBox}"
+						ItemsSource="{Binding MainVM.AllGroupsList, Source={StaticResource Locator}}"
+						SelectedValue="{Binding ExpenseToAdd.GroupId, Mode=TwoWay}" SelectedValuePath="Id"
+						DisplayMemberPath="Name">
+                        <Interactivity:Interaction.Behaviors>
+                            <Core:EventTriggerBehavior EventName="SelectionChanged">
+                                <Core:InvokeCommandAction Command="{Binding GroupSelectedCommand, Mode=OneWay}" InputConverter="{StaticResource GroupSelectedToMembersConverter}"/>
+                            </Core:EventTriggerBehavior>
+                        </Interactivity:Interaction.Behaviors>
+                    </ComboBox>
                 </Grid>
+            </StackPanel>
 
-                <Grid Grid.Row="1" Margin="0,20">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+            <Grid Grid.Row="1" Margin="0,20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-                    <Image Stretch="Uniform" Width="35" Source="Assets/Images/expense_general.png" VerticalAlignment="Center"/>
-                    <Grid Grid.Column="1" BorderThickness="15,0,0,0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-                        <TextBox Text="{Binding ExpenseToAdd.Description, Mode=TwoWay}" PlaceholderText="Enter a description" 
-                                 InputScope="Text" TextWrapping="NoWrap" BorderThickness="0,0,0,1"/>
+                <Image Stretch="Uniform" Width="35" Source="Assets/Images/expense_general.png" VerticalAlignment="Center"/>
+                <Grid Grid.Column="1" BorderThickness="15,0,0,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <TextBox Text="{Binding ExpenseToAdd.Description, Mode=TwoWay}" PlaceholderText="Enter a description" 
+						InputScope="Text" TextWrapping="NoWrap" BorderThickness="0,0,0,1"/>
 
-                        <Grid Grid.Row="1" Margin="0,10,0,0">
+                    <Grid Grid.Row="1" Margin="0,10,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <ComboBox BorderThickness="1" VerticalAlignment="Bottom"
+							ItemsSource="{Binding SupportedCurrencyList}" DisplayMemberPath="CurrencyCode"
+							SelectedValue="{Binding ExpenseToAdd.CurrencyCode, Mode=TwoWay}" SelectedValuePath="CurrencyCode"/>
+                        <TextBox Text="{Binding ExpenseToAdd.Cost, Mode=TwoWay}" PlaceholderText="0.00"
+							InputScope="CurrencyAmount" BorderThickness="0,0,0,1" TextWrapping="NoWrap"                             
+							FontSize="22" FontWeight="SemiBold" Grid.Column="1" Margin="5,0,0,0"/>
+                    </Grid>
+                </Grid>
+            </Grid>
+
+            <ListView Grid.Row="3" ItemsSource="{Binding ExpenseToAdd.Users}">
+                <Interactivity:Interaction.Behaviors>
+                    <Core:EventTriggerBehavior EventName="SelectionChanged">
+                        <Core:InvokeCommandAction Command="{Binding RemoveUserCommand, Mode=OneWay}" InputConverter="{StaticResource ListSelectionToMemberConverter}"/>
+                    </Core:EventTriggerBehavior>
+                </Interactivity:Interaction.Behaviors>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Height="50">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <ComboBox BorderThickness="1" VerticalAlignment="Bottom"
-                                      ItemsSource="{Binding SupportedCurrencyList}" DisplayMemberPath="CurrencyCode"
-                                      SelectedValue="{Binding ExpenseToAdd.CurrencyCode, Mode=TwoWay}" SelectedValuePath="CurrencyCode"/>
-                            <TextBox Text="{Binding ExpenseToAdd.Cost, Mode=TwoWay}" PlaceholderText="0.00"
-                                 InputScope="CurrencyAmount" BorderThickness="0,0,0,1" TextWrapping="NoWrap"                             
-                                 FontSize="22" FontWeight="SemiBold" Grid.Column="1" Margin="5,0,0,0"/>
+                            <Ellipse Style="{StaticResource RoundImage}">
+                                <Ellipse.Fill>
+                                    <ImageBrush ImageSource="{Binding User.Picture.Medium}"/>
+                                </Ellipse.Fill>
+                            </Ellipse>
+                            <TextBlock Text="{Binding User.Name}" VerticalAlignment="Center" Grid.Column="1" Margin="10,0,0,0"/>
+                            <SymbolIcon Grid.Column="2" Symbol="Remove" Foreground="Red" VerticalAlignment="Center"/>
                         </Grid>
-                    </Grid>
-                </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
 
-                <Grid Grid.Row="4">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
+            <Grid Grid.Row="4">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
 
-                    <DatePicker MonthFormat="{}{month.abbreviated}" 
-                                Date="{Binding ExpenseToAdd.Date, Mode=TwoWay, Converter={StaticResource DateTimeToStringConverter}}" />
-                    <ComboBox Grid.Column="1" VerticalAlignment="Center" Margin="15,0"
-                              ItemsSource="{Binding MainVM.GroupsList, Source={StaticResource Locator}}"
-                              DisplayMemberPath="Name"/>
-                    <Button Grid.Column="2" Content="&#xE8BD;" FontFamily="Segoe MDL2 Assets" FontSize="22"
-                            Background="Transparent" Style="{StaticResource NoBorderSelectButton}"
-                            Foreground="{Binding ExpenseToAdd.Details, Converter={StaticResource AvailableDetailsToBackgroudColorConverter}}">
-                        <Button.Flyout>
-                            <Flyout>
-                                <TextBox Text="{Binding ExpenseToAdd.Details, Mode=TwoWay}" AcceptsReturn="True"
-                                         TextWrapping="Wrap" InputScope="Text" MinWidth="200"/>
-                            </Flyout>
-                        </Button.Flyout>
-                    </Button>
-                </Grid>
+                <DatePicker MonthFormat="{}{month.abbreviated}" 
+					Date="{Binding ExpenseToAdd.Date, Converter={StaticResource DateTimeToStringConverter}, Mode=TwoWay}" />
+                <Button Grid.Column="2" Content="&#xE8BD;" FontFamily="Segoe MDL2 Assets" FontSize="22"
+					Background="Transparent" Style="{StaticResource NoBorderSelectButton}"
+					Foreground="{Binding ExpenseToAdd.Details, Converter={StaticResource AvailableDetailsToBackgroudColorConverter}}">
+                    <Button.Flyout>
+                        <Flyout>
+                            <TextBox Text="{Binding ExpenseToAdd.Details, Mode=TwoWay}" AcceptsReturn="True"
+								TextWrapping="Wrap" InputScope="Text" MinWidth="200"/>
+                        </Flyout>
+                    </Button.Flyout>
+                </Button>
             </Grid>
-        </ScrollViewer>
+        </Grid>
     </Grid>
 
-    <Page.BottomAppBar>
-        <CommandBar ClosedDisplayMode="Minimal">
-            <AppBarButton Command="{Binding RecordExpenseCommand}" Icon="Save" Label="save"/>
-        </CommandBar>
-    </Page.BottomAppBar>
 </Page>
