--- a/Split_It/Split_It/AddExpensePage.xaml
+++ b/Split_It/Split_It/AddExpensePage.xaml
@@ -74,15 +74,14 @@
 
                     <TextBlock Text="Friends:" VerticalAlignment="Center"/>
                     <AutoSuggestBox Grid.Column="1" VerticalAlignment="Center" PlaceholderText="Select friends"
-						DisplayMemberPath="Name" TextMemberPath="Name"
-						x:Name="friendsBox"
-						ItemsSource="{Binding MainVM.AllFriendsList, Source={StaticResource Locator}}"/>
+						            DisplayMemberPath="Name" TextMemberPath="Name" x:Name="friendsBox"
+                                    ItemsSource="{Binding MainVM.AllFriendsList, Source={StaticResource Locator}}"/>
 
                     <TextBlock Text="Group" VerticalAlignment="Center" Grid.Row="1"/>
                     <ComboBox Grid.Column="1" VerticalAlignment="Center" Grid.Row="1" Width="{Binding ActualWidth, ElementName=friendsBox}"
-						ItemsSource="{Binding MainVM.AllGroupsList, Source={StaticResource Locator}}"
-						SelectedValue="{Binding ExpenseToAdd.GroupId, Mode=TwoWay}" SelectedValuePath="Id"
-						DisplayMemberPath="Name">
+						      ItemsSource="{Binding MainVM.AllGroupsList, Source={StaticResource Locator}}"
+						      SelectedValue="{Binding ExpenseToAdd.GroupId, Mode=TwoWay}" SelectedValuePath="Id"
+						      DisplayMemberPath="Name">
                         <Interactivity:Interaction.Behaviors>
                             <Core:EventTriggerBehavior EventName="SelectionChanged">
                                 <Core:InvokeCommandAction Command="{Binding GroupSelectedCommand, Mode=OneWay}" InputConverter="{StaticResource SelectionToMemberConverter}"/>
