--- a/Split_It/Split_It/Dialog/IOUDialog.xaml
+++ b/Split_It/Split_It/Dialog/IOUDialog.xaml
@@ -27,8 +27,10 @@
         SelectionChanged="ListView_SelectionChanged">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <TextBlock Text="{Binding Converter={StaticResource EnumToStringConverter}}" 
-                           Height="50" VerticalAlignment="Center"/>
+                <StackPanel Orientation="Horizontal" Height="50">
+                    <TextBlock Text="{Binding Converter={StaticResource EnumToStringConverter}}" 
+                               VerticalAlignment="Center"/>
+                </StackPanel>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
