--- a/Split_It/Split_It/Dialog/IOUDialog.xaml
+++ b/Split_It/Split_It/Dialog/IOUDialog.xaml
@@ -10,7 +10,7 @@
 
     <ContentDialog.TitleTemplate>
         <DataTemplate>
-            <TextBlock Text="Split Detsil" FontSize="16" FontWeight="Bold"/>
+            <TextBlock Text="Split Detail" FontSize="16" FontWeight="Bold"/>
         </DataTemplate>
     </ContentDialog.TitleTemplate>
 
