--- a/Split_It/Split_It/Dialog/SplitDialog.xaml
+++ b/Split_It/Split_It/Dialog/SplitDialog.xaml
@@ -8,6 +8,7 @@
     xmlns:converter="using:Split_It.Converter"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:utils="using:Split_It.Utils"
+    xmlns:winux="using:WinUX.Xaml.Converters"
     mc:Ignorable="d"
     PrimaryButtonText="OKAY">
 
@@ -23,16 +24,17 @@
 
     <ContentDialog.Resources>
         <converter:EnumToStringConverter x:Key="EnumToStringConverter"/>
+        <winux:EnumToVisibilityConverter x:Key="EnumToVisibilityConverter"/>
     </ContentDialog.Resources>
 
-    <Grid>
+    <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <ComboBox ItemsSource="{Binding SplitOptions}" HorizontalAlignment="Center" Width="150"
-                  Margin="0,10" SelectedIndex="0"
+                  Margin="0,10"
                   SelectedItem="{Binding SelectedSplitOption, Mode=TwoWay}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
@@ -59,12 +61,16 @@
                             </Ellipse.Fill>
                         </Ellipse>
                         <TextBlock Text="{Binding User.Name}" VerticalAlignment="Center" Grid.Column="1" Margin="10,0,0,0"/>
+
                         <TextBox Text="{Binding OwedShare, Mode=TwoWay}" VerticalAlignment="Center" Grid.Column="2" 
-                                 PlaceholderText="0.00" InputScope="CurrencyAmount">
+                                 PlaceholderText="0.00" InputScope="CurrencyAmount" 
+                                 Visibility="{Binding DataContext.SelectedSplitOption, ConverterParameter=UNEQUALLY, Converter={StaticResource EnumToVisibilityConverter}, ElementName=grid}">
                             <Interactivity:Interaction.Behaviors>
                                 <utils:SelectAllTextBoxBehavior />
                             </Interactivity:Interaction.Behaviors>
                         </TextBox>
+
+
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
